--- a/css/styles.css
+++ b/css/styles.css
@@ -126,12 +126,12 @@
   background: #2e2f42;
 }
 .footer-logo {
-  color: #F4F4FD;
-font-weight: 100;
+  color: #f4f4fd;
+  font-weight: 100;
 }
 .footer-text {
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
-  color: #F4F4FD;
+  color: #f4f4fd;
 }
