--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@
 .team-background {
   background-color: #f4f4fd;
   width: 1440px;
-  height: 732px;
+  height: 1732px;   /* змінити на 732 */
 }
 .team-title {
   font-size: 36px;
