--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
   color: #404bbf;
 }
 .address-mail,
-.addres-tel {
+.contacts-number {
   color: #434455;
   font-size: 16px;
   font-weight: 400;
@@ -34,11 +34,11 @@
   font-style: normal;
 }
 .address-mail:hover,
-.addres-tel:hover {
+.contacts-number:hover {
   color: #404bbf;
 }
 .address-mail:focus,
-.addres-tel:focus {
+.contacts-number:focus {
   color: #404bbf;
 }
 /* section title */
