--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,55 @@
 .body {
-  font-family: Roboto;
-  color: #2e2f42;
+  font-family: Roboto, sans-serif;
+  color: #434455;
+  background-color: #FFFFFF;
 }
 /* HEDER */
-.background-heder {
-  background-color: #fff;
-}
 .logo {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
+  color: #4d5ae5; 
   font-size: 18px;
   font-weight: 700;
-  line-height: 116.667%;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
-.logo .accent {
-  color: #4d5ae5;
+.logo-accent {
+  color: #2e2f42;
 }
 .nav-link {
   color: #2e2f42;
   font-size: 16px;
   font-weight: 500;
   line-height: 150%;
+  letter-spacing: 0.02em;
+}
+.nav-link:hover {
+  color: #404bbf;
+}
+.nav-link:focus {
+  color: #404bbf;
 }
 .nav-link:active {
   color: #404bbf;
 }
-.contacts-email,
-.contacts-number {
+.addres-tel-mail {
+  font-style: normal;
+}
+.contacts-email-number {
   color: #434455;
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
-  font-style: normal;
+  letter-spacing: 0.02em
 }
-.contacts-email:hover,
-.contacts-number:hover {
+.contacts-email-number:hover {
   color: #404bbf;
 }
-.contacts-email:focus,
-.addres-tel:focus {
+.contacts-email-number:focus {
   color: #404bbf;
 }
 /* section title */
 .order-background {
-  width: 1440px;
-  height: 600px;
   background-color: #2e2f42;
 }
 .order-title {
@@ -52,6 +57,8 @@
   font-size: 56px;
   font-weight: 700;
   line-height: 107.143%;
+  text-align: center;
+  letter-spacing: 0.02em;
 }
 .order-button {
   color: #fff;
@@ -60,79 +67,86 @@
   line-height: 150%;
   border-radius: 4px;
   background-color: #4d5ae5;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  display: inline-flex;
-  padding: 16px 32px;
-  align-items: flex-start;
-  gap: 10px;
-  cursor: pointer;
+   cursor: pointer;
 }
 .order-button:hover {
   background-color: #404bbf;
 }
 /* section about company */
 .company-list {
+  color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
+  letter-spacing: 0.02em;
 }
 .company-text {
-  color: #434455;
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
+  letter-spacing: 0.02em;
 }
 /* section our team */
-.team-background {
-  background-color: #f4f4fd;
-  width: 1440px;
-  height: 1732px; /* змінити на 732 */
-}
 .team-title {
+  color: #2e2f42;
   font-size: 36px;
   font-weight: 700;
   line-height: 111.111%;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 .team-name {
+  color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
+  letter-spacing: 0.02em;
+  background-color: #FFFFFF
+  
 }
 .team-text {
-  color: #434455;
-  font-size: 16px;
+    font-size: 16px;
   font-weight: 400;
   line-height: 150%;
+  letter-spacing: 0.02em;
+  background-color: #FFFFFF
 }
+/* portfolio */
 .portfolio-title {
+  color: #2e2f42;
   font-size: 36px;
   font-weight: 700;
   line-height: 40px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 .portfolio-name {
+  color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
+  letter-spacing: 0.02em;
 }
 .portfolio-text {
-  color: #434455;
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
+  letter-spacing: 0.02em;
 }
 /* footer */
 .footer-background {
-  width: 1440px;
-  height: 312px;
-  background: #2e2f42;
+    background: #2e2f42;
 }
 .footer-logo {
   color: #f4f4fd;
-  font-weight: 100;
-}
+
+  }
 .footer-text {
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
   color: #f4f4fd;
+  letter-spacing: 0.02em;
 }
