--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 .body {
   font-family: Roboto, sans-serif;
   color: #434455;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 /* HEDER */
 .logo {
   font-family: Raleway, sans-serif;
-  color: #4d5ae5; 
+  color: #4d5ae5;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
@@ -40,7 +40,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
-  letter-spacing: 0.02em
+  letter-spacing: 0.02em;
 }
 .contacts-email-number:hover {
   color: #404bbf;
@@ -67,7 +67,7 @@
   line-height: 150%;
   border-radius: 4px;
   background-color: #4d5ae5;
-   cursor: pointer;
+  cursor: pointer;
 }
 .order-button:hover {
   background-color: #404bbf;
@@ -102,15 +102,14 @@
   font-weight: 500;
   line-height: 120%;
   letter-spacing: 0.02em;
-  background-color: #FFFFFF
-  
+  background-color: #ffffff;
 }
 .team-text {
-    font-size: 16px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 150%;
   letter-spacing: 0.02em;
-  background-color: #FFFFFF
+  background-color: #ffffff;
 }
 /* portfolio */
 .portfolio-title {
@@ -137,12 +136,11 @@
 }
 /* footer */
 .footer-background {
-    background: #2e2f42;
+  background: #2e2f42;
 }
 .footer-logo {
   color: #f4f4fd;
-
-  }
+}
 .footer-text {
   font-size: 16px;
   font-weight: 400;
