--- a/css/styles.css
+++ b/css/styles.css
@@ -65,13 +65,17 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 150%;
-  border-radius: 4px;
+  letter-spacing: 0.04em;
   background-color: #4d5ae5;
   cursor: pointer;
-}
+  }
 .order-button:hover {
   background-color: #404bbf;
 }
+.order-button:focus {
+  background-color: #404bbf;
+}
+
 /* section about company */
 .company-list {
   color: #2e2f42;
@@ -87,6 +91,9 @@
   letter-spacing: 0.02em;
 }
 /* section our team */
+.team-fon {
+  background-color: #F4F4FD;
+}
 .team-title {
   color: #2e2f42;
   font-size: 36px;
@@ -96,20 +103,22 @@
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
+.team-list {
+  background-color: #ffffff;
+}
 .team-name {
   color: #2e2f42;
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
   letter-spacing: 0.02em;
-  background-color: #ffffff;
-}
+  }
 .team-text {
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
   letter-spacing: 0.02em;
-  background-color: #ffffff;
+  
 }
 /* portfolio */
 .portfolio-title {
