--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@
   letter-spacing: 0.04em;
   background-color: #4d5ae5;
   cursor: pointer;
-  }
+}
 .order-button:hover {
   background-color: #404bbf;
 }
@@ -92,7 +92,7 @@
 }
 /* section our team */
 .team-fon {
-  background-color: #F4F4FD;
+  background-color: #f4f4fd;
 }
 .team-title {
   color: #2e2f42;
@@ -112,13 +112,12 @@
   font-weight: 500;
   line-height: 120%;
   letter-spacing: 0.02em;
-  }
+}
 .team-text {
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
   letter-spacing: 0.02em;
-  
 }
 /* portfolio */
 .portfolio-title {
