--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,24 @@
+:root {
+  --color-blue: #4d5ae5;
+  --color-gren: #2e2f42;
+  --color-hover: #404bbf;
+}
 .body {
   font-family: Roboto, sans-serif;
   color: #434455;
   background-color: #ffffff;
 }
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
 /* HEDER */
 .logo {
   font-family: Raleway, sans-serif;
-  color: #4d5ae5;
+  color: var(--color-blue);
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
@@ -14,23 +26,23 @@
   text-transform: uppercase;
 }
 .logo-accent {
-  color: #2e2f42;
+  color: var(--color-gren);
 }
 .nav-link {
-  color: #2e2f42;
+  color: var(--color-gren);
   font-size: 16px;
   font-weight: 500;
   line-height: 150%;
   letter-spacing: 0.02em;
 }
 .nav-link:hover {
-  color: #404bbf;
+  color: var(--color-hover);
 }
 .nav-link:focus {
-  color: #404bbf;
+  color: var(--color-hover);
 }
 .nav-link:active {
-  color: #404bbf;
+  color: var(--color-hover);
 }
 .addres-tel-mail {
   font-style: normal;
@@ -43,14 +55,14 @@
   letter-spacing: 0.02em;
 }
 .contacts-email-number:hover {
-  color: #404bbf;
+  color: var(--color-hover);
 }
 .contacts-email-number:focus {
-  color: #404bbf;
+  color: var(--color-hover);
 }
 /* section title */
 .order-background {
-  background-color: #2e2f42;
+  background-color: var(--color-gren);
 }
 .order-title {
   color: #fff;
@@ -66,19 +78,31 @@
   font-weight: 500;
   line-height: 150%;
   letter-spacing: 0.04em;
-  background-color: #4d5ae5;
+  background-color: var(--color-blue);
   cursor: pointer;
 }
 .order-button:hover {
-  background-color: #404bbf;
+  background-color: var(--color-hover) f;
 }
 .order-button:focus {
-  background-color: #404bbf;
+  background-color: var(--color-hover);
 }
 
 /* section about company */
+.visually-hidden {
+  position: absolute;
+  width: 1 px;
+  height: 1 px;
+  margin: -1 px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .company-list {
-  color: #2e2f42;
+  color: var(--color-gren);
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
@@ -95,7 +119,7 @@
   background-color: #f4f4fd;
 }
 .team-title {
-  color: #2e2f42;
+  color: var(--color-gren);
   font-size: 36px;
   font-weight: 700;
   line-height: 111.111%;
@@ -107,7 +131,7 @@
   background-color: #ffffff;
 }
 .team-name {
-  color: #2e2f42;
+  color: var(--color-gren);
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
@@ -121,7 +145,7 @@
 }
 /* portfolio */
 .portfolio-title {
-  color: #2e2f42;
+  color: var(--color-gren);
   font-size: 36px;
   font-weight: 700;
   line-height: 40px;
@@ -130,7 +154,7 @@
   text-transform: capitalize;
 }
 .portfolio-name {
-  color: #2e2f42;
+  color: var(--color-gren);
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
@@ -144,7 +168,7 @@
 }
 /* footer */
 .footer-background {
-  background: #2e2f42;
+  background: var(--color-gren) 2;
 }
 .footer-logo {
   color: #f4f4fd;
